# zurich-road

./: .gitignore  .gitmodules  README.md
computer-vision/auto-stitch2d/: CMakeLists.txt  stitch.cpp
computer-vision/cv2-gradient/: CMakeLists.txt  gradient.cpp
computer-vision/cv2-imgproc/: CMakeLists.txt  flip.cpp
computer-vision/cv2-io/: CMakeLists.txt  inverse_gray.cpp  inverse_rgb.cpp  read_write.cpp
computer-vision/cv2-transformation/2d-trans/: CMakeLists.txt  affine.cpp
computer-vision/cv2-transformation/homography/: CMakeLists.txt  homography.cpp
cpp-basic/: CMakeLists.txt  README.md
cpp-basic/bjarne/: CMakeLists.txt
cpp-basic/bjarne/ch-3/: initializing_containers.cpp
cpp-basic/ch-21/: ex-1.cpp
cpp-basic/ch-22/: ex-1.cpp
cpp-basic/ch-23/: ex-1.cpp
cpp-basic/ch-24/: README.md  ex-1.cpp
cpp-basic/ch-25/: README.md
cpp-basic/ch-26/: README.md  ex-1.cpp
cpp-basic/ch-26/include/: coworker.h
cv2-imgproc/: flip.cpp  rotate.cpp
cv2-io/: CMakeLists.txt  read_write.cpp
neural-networks/MyNN/: CMakeLists.txt
neural-networks/MyNN/include/: mynn.hpp  perceptron.hpp
neural-networks/MyNN/src/: perceptron.cpp
neural-networks/NN-basic/: CMakeLists.txt  main.cpp
qt-basic/: README.md
qt-basic/first-window/: CMakeLists.txt
qt-basic/first-window/src/: main.cpp
qt-basic/graph-plotter/: CMakeLists.txt
qt-basic/graph-plotter/res/: customgeometry.qrc
qt-basic/graph-plotter/src/: beziercurve.cpp  customgeometry.qrc  main.cpp
qt-basic/layout/: CMakeLists.txt
qt-basic/layout/src/: main.cpp
qt-basic/plot-points/: CMakeLists.txt  README.md
qt-basic/plot-points/include/: mainwindow.h
qt-basic/plot-points/src/: main.cpp
qt-basic/qml-curve-draw/include/: beziercurve.hpp
qt-basic/qml-curve-draw/src/: main.cpp
stl-basic/: CMakeLists.txt  iterate_vector.cpp
stl-list/: CMakeLists.txt  int_list.cpp
